Version 1.1

    * SandboxConfig doesn't import modules to get their path
    * interpreter config feature is more strict: don't give access to
      frame.f_locals nor generator.gi_code (don't enable code feature)
    * Add __dir__() special method to read object proxy and fake module
      objects
    * Add SandoxConfig.allowSafeModule(): similar to allowModule() but don't
      proxify the attribute
    * Add "codecs", "datetime", "encodings", "itertools", "math", "random"
      and "time" features
    * interpreter feature enables encodings feature to support non-ascii
      unicode literals

Version 1.0.1 (2010-07-26)

    * Fix Python 2.5 compatibility
    * Fix Sandbox.execute(): don't create a new object for globals and locals
      when the user pass its own dict, only proxify the keys and values

Version 1.0 (2010-06-29)

    * First public release
